# Mini-Conf

./: .gitignore  Dockerfile  Makefile  README.md  about.html  access.html  access.md  calendar.html  callforcontributions.md  codeofconduct.md  index.html  main.py  package-lock.json  package.json  paper_vis.html  papers.html  papers.json  policies.html  poster_1.html  poster_10.html  poster_100.html  poster_101.html  poster_103.html  poster_11.html  poster_14.html  poster_15.html  poster_16.html  poster_18.html  poster_2.html  poster_21.html  poster_27.html  poster_28.html  poster_29.html  poster_30.html  poster_32.html  poster_33.html  poster_34.html  poster_35.html  poster_37.html  poster_38.html  (+88 more)
.github/workflows/: build.yml
media/: README.md
media/reveal.js/: index.html  index.j2
scripts/: README.md  prepend_title_cards.py  process_videos.py
scripts/reveal.js/: index.j2
scripts/reveal.js/css/: reveal.scss
scripts/reveal.js/test/: test-pdf.html  test.html
sitedata/: README.md  all_acmc2020_submissions.csv  committee.yml  config.yml  faq.yml  list_abandoned_papers.py  main_calendar.json  papers-old.csv  papers.csv  papers2.csv  papers_projection.json  sessions.yml  speakers.yml
static/abstracts/: 9.md
static/css/: main.css
static/js/: calendar.js  paper_vis.js  papers.js  schedule.js
static/paper-images/: convert-jpg.sh
templates/: access.html  base.html  components.html  index.html  papers.html  policies.html  poster.html  schedule.html  session.html  sound.html  sounds.html  speaker.html  submissions.html
