[tool.poetry]
name = "acmc2020-miniconf"
version = "0.1.0"
description = "A conference website for the 2020 Australasian Computer Music Conference"
authors = ["Ben Swift <ben.swift@anu.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
frozen-flask = "^0.15"
Flask-Markdown = "^0.3"
tqdm = "^4.46.0"
PyYAML = "^5.3.1"
google-api-python-client = "^1.9.3"
oauth2client = "^4.1.3"
progressbar2 = "^3.51.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
mypy = "^0.761"
ics = "^0.7"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
